--- a/assets/css/tools/_reset.sass
+++ b/assets/css/tools/_reset.sass
@@ -4,6 +4,7 @@ body, html
     -moz-box-sizing: border-box
     box-sizing: border-box
     min-width: 320px
+    font-family: 'Fira Sans', sans-serif
     button,input,textarea,select 
         border: 0 
         font-family: inherit
