--- a/style.sass
+++ b/style.sass
@@ -14,3 +14,5 @@
 @import './assets/css/components/header/_header' 
 @import './assets/css/components/footer/_footer' 
 @import './assets/css/views/home/_home'    
+@import './assets/css/views/ativos-imobiliarios/_ativos-imobiliarios'    
+@import './assets/css/views/politica-de-investimentos/_politica-de-investimentos'    
