--- a/assets/css/tools/_objects.sass
+++ b/assets/css/tools/_objects.sass
@@ -31,5 +31,54 @@ input
     display: block
     max-width: 1172px
     margin: 0 auto
-    padding-left: 15px
-    padding-right: 15px
+    padding-left: 20px
+    padding-right: 20px
+
+.cotacoes 
+    display: flex 
+    flex-flow: row wrap 
+    justify-content: flex-end 
+    align-items: center
+    font-size: 1rem
+    small 
+        display: block 
+        font-size: 80%
+        letter-spacing: 1.8px
+        font-weight: 100
+        margin-top: 5px     
+    > * 
+        span 
+            &:first-of-type 
+                color: $terciary
+            .pos 
+                color: $green
+            .neg 
+                color: $red
+        &:first-of-type 
+            display: inherit 
+            flex-flow: column
+            padding-right: 85px
+            span 
+                line-height: 1.1
+            & ~ * 
+                display: inherit 
+                flex-flow: inherit
+                align-items: inherit
+                text-align: right
+                span    
+                    line-height: 1.3
+                > * 
+                    display: inherit 
+                    flex-flow: row 
+                    &:not(:last-of-type)
+                        padding-right: 85px
+                    > span 
+                        &:last-of-type 
+                            display: inherit 
+                            flex-flow: column
+                            padding-left: 20px    
+.section-title
+    display: block 
+    margin-bottom: 15px
+    font-weight: bold
+    font-size: 2rem
