--- a/assets/css/views/politica-de-investimentos/_politica-de-investimentos.sass
+++ b/assets/css/views/politica-de-investimentos/_politica-de-investimentos.sass
@@ -8,15 +8,21 @@
 			flex-flow: row wrap 
 			justify-content: space-between 
 			align-items: stretch 
-			max-width: 100%
-			+mq(737px, max)
+			+mq(1024px, max)
 				flex-flow: column
-				margin-bottom: -22px
+				margin-bottom: -40px
 			>  * 
 				flex: 1
-				padding: 0 22px
+				&:first-child 
+					padding-right: 40px 
+					+mq(1024px, max)
+						padding-right: 0
+					& + * 
+						padding-left: 40px
+						+mq(1024px, max)
+							padding-left: 0
 				+mq(737px, max)
-					padding: 0 0 22px
+					padding: 0 0 40px
 				text-align: justify
 				ul.paragraph 
 					display: flex 
