--- a/style.sass
+++ b/style.sass
@@ -16,3 +16,4 @@
 @import './assets/css/views/home/_home'    
 @import './assets/css/views/ativos-imobiliarios/_ativos-imobiliarios'    
 @import './assets/css/views/politica-de-investimentos/_politica-de-investimentos'    
+@import './assets/css/views/central-de-downloads/_central-de-downloads'    
