--- a/style.sass
+++ b/style.sass
@@ -17,3 +17,4 @@
 @import './assets/css/views/ativos-imobiliarios/_ativos-imobiliarios'    
 @import './assets/css/views/politica-de-investimentos/_politica-de-investimentos'    
 @import './assets/css/views/central-de-downloads/_central-de-downloads'    
+@import './assets/css/views/contato/_contato'    
