--- a/assets/css/tools/_objects.sass
+++ b/assets/css/tools/_objects.sass
@@ -85,7 +85,8 @@ input
     margin-bottom: 15px
     font-weight: bold
     font-size: 2rem
-
+    & + p 
+        margin: 35px 0 30px
 .btn 
     display: block 
     padding: 10px
@@ -104,6 +105,56 @@ input
         &:hover 
             background: $primary
             color: white
+    &.btn-3 
+        background: $secondary
+        color: white 
+        border-radius: 999px
+        text-transform: initial
+        letter-spacing: initial
+        padding: 8px 40px
 
 strong 
     font-weight: bold!important
+
+p 
+    line-height: 1.6!important
+
+form 
+    .form-group 
+        display: block 
+        margin-bottom: 20px 
+        label 
+            display: inherit 
+            margin-bottom: inherit
+            font-weight: bold 
+            color: $primary 
+            font-size: 1rem
+        input, textarea
+            background: white
+            color: $lightgray
+            font-size: 1rem 
+            padding: 5px 13px
+            border: 1px $lightgray solid
+            width: 100%
+            overflow: hidden 
+            resize: none 
+        textarea 
+            height: 100px
+
+.modal 
+    position: fixed 
+    width: 100%
+    height: 100%
+    background: rgba(255,255,255,.9)
+    top: 0
+    left: 0
+    z-index: 99999
+    display: flex 
+    flex-flow: column 
+    justify-content: center 
+    align-items: center
+    &-inner 
+        border-radius: 8px
+        background: white
+        padding: 40px 30px
+        box-shadow: 0px 25px 40px -35px black
