--- a/assets/css/views/central-de-downloads/_central-de-downloads.sass
+++ b/assets/css/views/central-de-downloads/_central-de-downloads.sass
@@ -5,7 +5,6 @@
 	#wrap 	
 		display: flex 
 		flex-flow: column
-		padding-bottom: 0
 		#footer,
 		#header 
 			flex: 0 0 auto 
@@ -15,7 +14,6 @@
 		display: flex 
 		flex-flow: column 
 		min-height: 100%
-		position: absolute 
 		top: 0
 		left: 0
 		width: 100%
@@ -67,6 +65,7 @@
 									padding-left: 60px 
 									padding-right: 60px
 									.btn 
+										padding: 6px 20px
 										+mq(900px, max)
 											border: 0
 											padding: 0
