--- a/assets/css/tools/_objects.sass
+++ b/assets/css/tools/_objects.sass
@@ -133,11 +133,13 @@ form
             background: white
             color: $lightgray
             font-size: 1rem 
-            padding: 5px 13px
+            padding: 8px 13px
             border: 1px $lightgray solid
             width: 100%
             overflow: hidden 
             resize: none 
+            border-radius: 5px
+            color: gray            
         textarea 
             height: 100px
 
