--- a/assets/css/views/politica-de-investimentos/_politica-de-investimentos.sass
+++ b/assets/css/views/politica-de-investimentos/_politica-de-investimentos.sass
@@ -7,7 +7,9 @@
 			display: flex 
 			flex-flow: row wrap 
 			justify-content: space-between 
-			align-items: stretch 
+			align-items: stretch
+			p 
+				font-size: 1.1rem 
 			+mq(1024px, max)
 				flex-flow: column
 				margin-bottom: -20px
