--- a/assets/css/tools/_general.sass
+++ b/assets/css/tools/_general.sass
@@ -19,11 +19,18 @@ body
 				z-index: 999999	
 				
 #wrap
-	padding-top: 30px					
+	padding-top: 25px					
 	+mq(1280px, max)
 		padding-top: 0
 		background: $clearblue
 .pg-interna
+	.footer 
+		+mq(1180px, min)
+			z-index: 1
+		background: $clearblue
+		background: -moz-linear-gradient(90deg, $clearblue 0%, $mediumblue 100%)
+		background: -webkit-linear-gradient(90deg, $clearblue 0%, $mediumblue 100%)
+		background: linear-gradient(90deg, $clearblue 0%, $mediumblue 100%)		
 	.container 
 		max-width: 1680px
 		padding-left: 40px 
@@ -39,6 +46,17 @@ body
 		background: linear-gradient(90deg, $clearblue 0%, $mediumblue 100%)
 		min-height: 100vh
 		padding-bottom: 30px
+		display: flex 
+		flex-flow: column 
+		+mq(1180px, min)
+			margin-bottom: 550px
+		z-index: 2		
+		#footer, #header 
+			flex: 0 0 auto
+		#main 
+			flex: 1
+			+mq(1180px, min)
+				flex: 0 0 100vh
 		#header
 			width: 100%
 			background-color: transparent!important
