--- a/assets/css/views/ativos-imobiliarios/_ativos-imobiliarios.sass
+++ b/assets/css/views/ativos-imobiliarios/_ativos-imobiliarios.sass
@@ -1,6 +1,13 @@
 @import '../../tools/mixins'
 @import '../../tools/colors'
 
+
+@-webkit-keyframes opacity 
+    0% 
+        opacity: 0
+    100% 
+        opacity: 1
+
 .pg-ativos-imobiliarios
 	.ativos-imobiliarios 
 		.container 
@@ -53,14 +60,14 @@
 				& + p 
 					display: block 
 					text-align: center 
-					color: $lightgray
+					color: gray
 					font-weight: 500
 					font-size: 1.2rem
 					margin: 40px auto
 			> * 
 				flex: 1
 				&:last-child 
-					width: 535px
+					width: 626px
 					flex: 0 0 auto 
 					padding-left: 98px
 					+mq(1180px, max)
@@ -89,6 +96,7 @@
 						border-radius: 32px
 						text-align: center
 						width: 100%
+						box-shadow: 0px 30px 30px -45px black						
 						p 
 							margin-top: 40px
 							font-size: 1rem 
