--- a/assets/css/views/central-de-downloads/_central-de-downloads.sass
+++ b/assets/css/views/central-de-downloads/_central-de-downloads.sass
@@ -13,7 +13,7 @@
 	.downloads
 		display: flex 
 		flex-flow: column 
-		min-height: 100%
+		min-height: 100vh
 		top: 0
 		left: 0
 		width: 100%
@@ -35,7 +35,7 @@
 					padding-top: 0
 				.sidebar 
 					width: 100%
-					max-width: 264px
+					max-width: 320px
 					flex: 0 0 auto 
 					+mq(900px, max)
 						display: none
@@ -70,6 +70,12 @@
 											border: 0
 											padding: 0
 											line-height: 2
+											&:hover 
+												background: transparent
+												color: $primary
+												svg 
+													path
+														fill: $primary 
 											span 
 												display: none
 										svg 
@@ -184,7 +190,7 @@
 						display: inherit 
 						flex-flow: inherit 
 						justify-content: flex-end 
-						align-items: center
+						align-items: stretch
 						padding-left: 33px 
 						+mq(900px, max)
 							padding-left: 0
@@ -205,5 +211,6 @@
 							line-height: 3
 							padding: 0 15px
 							flex: 1
+							font-size: .9rem
 							& + * 
 								flex: 0 0 auto
