--- a/assets/css/views/central-de-downloads/_central-de-downloads.sass
+++ b/assets/css/views/central-de-downloads/_central-de-downloads.sass
@@ -19,7 +19,6 @@
 		width: 100%
 		&-content 
 			background: white
-			margin: 35px 0 0
 			flex: 1
 			+mq(900px, max)
 				background: none
@@ -52,7 +51,7 @@
 								border-bottom: 2px lightgray solid
 					& + * 
 						flex: 1
-						padding-left: 266px
+						padding-left: 133px
 						+mq(900px, max)
 							padding-left: 0
 						.results
@@ -170,6 +169,7 @@
 									padding-left: 0
 		&-header
 			flex: 0 0 auto
+			padding-bottom: 35px
 			form 
 				display: flex 
 				flex-flow: row wrap 
