--- a/assets/css/tools/_general.sass
+++ b/assets/css/tools/_general.sass
@@ -3,34 +3,37 @@
 
 body
 	&.focused
-		+mq(1130px, min)
-			&::after 
-			    content: ''
-			    display: block
-			    position: fixed
-			    top: 0
-			    left: 0
-			    width: 100%
-			    height: 100%
-			    background: rgba(0,0,0,.35)		
-			    z-index: 1000
-			#filtro 
-				position: relative
-				z-index: 999999	
-				
+		#header,
+		.downloads-content
+			position: relative
+			overflow: hidden
+			*
+				transition: 200ms ease-in-out all
+				filter: blur(3px)
+			// &::before 
+			// 	+mq(1130px, min)
+			// 	    content: ''
+			// 	    display: block
+			// 	    position: absolute
+			// 	    top: 0
+			// 	    left: 0
+			// 	    width: 100%
+			// 	    height: 100%
+			// 	    background: rgba(0,0,0,.35)		
+			// 	    z-index: 1000
+
 #wrap
 	padding-top: 25px					
 	+mq(1280px, max)
 		padding-top: 0
-		background: $clearblue
 .pg-interna
+	background: $clearblue
+	background: -moz-linear-gradient(90deg, $clearblue 0%, $mediumblue 100%)
+	background: -webkit-linear-gradient(90deg, $clearblue 0%, $mediumblue 100%)
+	background: linear-gradient(90deg, $clearblue 0%, $mediumblue 100%)	
 	.footer 
 		+mq(1180px, min)
-			z-index: 1
-		background: $clearblue
-		background: -moz-linear-gradient(90deg, $clearblue 0%, $mediumblue 100%)
-		background: -webkit-linear-gradient(90deg, $clearblue 0%, $mediumblue 100%)
-		background: linear-gradient(90deg, $clearblue 0%, $mediumblue 100%)		
+			z-index: 1	
 	.container 
 		max-width: 1680px
 		padding-left: 40px 
@@ -40,31 +43,29 @@ body
 			padding-right: 20px
 	#wrap 
 		padding-top: 0
+		min-height: 100vh
+		display: flex 
+		flex-flow: column 
 		background: $clearblue
 		background: -moz-linear-gradient(90deg, $clearblue 0%, $mediumblue 100%)
 		background: -webkit-linear-gradient(90deg, $clearblue 0%, $mediumblue 100%)
-		background: linear-gradient(90deg, $clearblue 0%, $mediumblue 100%)
-		min-height: 100vh
-		padding-bottom: 30px
-		display: flex 
-		flex-flow: column 
+		background: linear-gradient(90deg, $clearblue 0%, $mediumblue 100%)			
 		+mq(1180px, min)
-			margin-bottom: 550px
+			margin-bottom: 650px
 		z-index: 2		
 		#footer, #header 
 			flex: 0 0 auto
 		#main 
 			flex: 1
-			+mq(1180px, min)
-				flex: 0 0 100vh
 		#header
 			width: 100%
 			background-color: transparent!important
 			box-shadow: none
-			margin-bottom: 80px
+			padding-bottom: 30px
+			margin-bottom: 0
 			.container 
 				padding-top: 40px	
-			+mq(1280px, max)
+			+mq(1440px, max)
 				margin-bottom: 30px
 			nav 
 				ul 
