--- a/assets/css/views/politica-de-investimentos/_politica-de-investimentos.sass
+++ b/assets/css/views/politica-de-investimentos/_politica-de-investimentos.sass
@@ -8,8 +8,15 @@
 			flex-flow: row wrap 
 			justify-content: space-between 
 			align-items: stretch
+			.section-title 
+				+mq(1440px, max)
+					font-size: 1rem
+					& + p 
+						margin: 10px 0 15px
 			p 
 				font-size: 1.1rem 
+				+mq(1440px, max)
+					font-size: .8rem
 			+mq(1024px, max)
 				flex-flow: column
 				margin-bottom: -20px
@@ -37,6 +44,8 @@
 						text-align: left
 						padding: 0 15px
 						color: $terciary
+						+mq(1440px, max)
+							font-size: .8rem
 						strong 
 							display: block
 							color: $primary
