--- a/assets/css/views/central-de-downloads/_central-de-downloads.sass
+++ b/assets/css/views/central-de-downloads/_central-de-downloads.sass
@@ -13,7 +13,8 @@
 	.downloads
 		display: flex 
 		flex-flow: column 
-		min-height: 100vh
+		+mq(1336px, min)
+			min-height: 100vh
 		top: 0
 		left: 0
 		width: 100%
@@ -24,7 +25,8 @@
 				background: none
 			.container 
 				padding-top: 100px
-				padding-bottom: 100px
+				+mq(900px, min)
+					padding-bottom: 60px
 				display: flex 
 				flex-flow: row wrap 
 				justify-content: space-between
@@ -143,7 +145,7 @@
 								position: relative
 								overflow: hidden
 								+mq(900px, max)
-									padding-right: 15px
+									padding-right: 26px
 								select 
 									z-index: 1
 									width: calc(100% + 60px)
@@ -209,7 +211,7 @@
 									fill: white							
 						input 
 							line-height: 3
-							padding: 0 15px
+							padding: 0 25px
 							flex: 1
 							font-size: .9rem
 							& + * 
