--- a/assets/css/views/contato/_contato.sass
+++ b/assets/css/views/contato/_contato.sass
@@ -22,6 +22,7 @@
 								padding-right: 15px
 		p 
 			color: #6D7278
+			font-size: 1rem
 			+mq(1366px, min)
 				+mq(1680px, max)	
 					font-size: .8rem			
