--- a/assets/css/views/politica-de-investimentos/_politica-de-investimentos.sass
+++ b/assets/css/views/politica-de-investimentos/_politica-de-investimentos.sass
@@ -7,21 +7,40 @@
 		flex-flow: row wrap 
 		justify-content: center 
 		align-items: stretch	
-		width: 320px
+		max-width: 320px
 		border-radius: 8px 
 		border: 1px $primary solid
 		margin: 0 auto 30px
 		overflow: hidden
+		width: calc(100% - 40px)
+		position: relative
+		&::after 
+			display: block 
+			content: ''
+			position: absolute
+			height: 100%
+			width: 50%
+			top: 0
+			left: 0
+			transition: 50ms linear all
+			z-index: 1
+			background: $primary
+			transform: translateX(0%)
+		&[data-id="caracteristicas"]::after 
+			transform: translateX(100%)
 		> * 
 			flex: 1
+			z-index: 2
+			position: relative
 			text-align: center 
 			font-size: .9rem 
 			font-weight: bold
 			color: $primary
 			line-height: 2
 			&.active 
-				background: $primary 
 				color: white 
+				a 
+					color: inherit
 	.politica-de-investimentos
 		.container 
 			display: flex 
