--- a/assets/css/components/footer/_footer.sass
+++ b/assets/css/components/footer/_footer.sass
@@ -29,6 +29,7 @@
 					width: 100%
 					max-width: 350px
 					margin-top: 30px
+					font-size: .8rem
 					+mq(1140px, max)
 						max-width: 100%
 				img 
