--- a/assets/css/tools/_general.sass
+++ b/assets/css/tools/_general.sass
@@ -40,9 +40,10 @@ body
 		background: -moz-linear-gradient(90deg, $clearblue 0%, $mediumblue 100%)
 		background: -webkit-linear-gradient(90deg, $clearblue 0%, $mediumblue 100%)
 		background: linear-gradient(90deg, $clearblue 0%, $mediumblue 100%)	
-		padding-bottom: 30px		
+		padding-bottom: 30px	
+		box-shadow: 0px 20px 70px -25px black	
 		+mq(1180px, min)
-			margin-bottom: 650px
+			margin-bottom: 575px
 		z-index: 2		
 		#footer, #header 
 			flex: 0 0 auto
