- Padding bottom 0 na central de downloads

--- a/assets/css/views/central-de-downloads/_central-de-downloads.sass
+++ b/assets/css/views/central-de-downloads/_central-de-downloads.sass
@@ -5,6 +5,8 @@
 	#wrap 	
 		display: flex 
 		flex-flow: column
+		+mq(900px, min)
+			padding-bottom: 0
 		#footer,
 		#header 
 			flex: 0 0 auto 
