- Espaçamento em ativos

--- a/assets/css/views/ativos-imobiliarios/_ativos-imobiliarios.sass
+++ b/assets/css/views/ativos-imobiliarios/_ativos-imobiliarios.sass
@@ -9,6 +9,13 @@
         opacity: 1
 
 .pg-ativos-imobiliarios
+	#main 
+		display: flex 
+		flex-flow: column
+		justify-content: center 
+		align-items: center 
+		> * 
+			width: 100%
 	.ativos-imobiliarios 
 		.container 
 			display: flex 
